--- a/combo.tex
+++ b/combo.tex
@@ -48,11 +48,10 @@ $(\lambda x.x + x)y \ = \ (x + x)[x:=y] \ = \ y + y$
 \\$f(x) = 2x \ = \ $  $f(x:=y) = 2(x:=y) \ = 2(y)$
 \end{center}
 \item You can apply lambda functions with more than just variables too. Take the $\lambda$-abstraction $\lambda x.x$ $x$. We can apply this with many different abstractions, but for now lets apply it with itself. 
-\begin{center}$(\lambda x.x$ $x)$ $(\lambda x.x$ $x)$ $\quad$ $\rightarrow$ $\quad$ $(\lambda x.x$ $x)$ $[x := (\lambda x.x$ $x)]$
-\end{center}
-\begin{center}
-$= \quad (\lambda x.x$ $x)$ $(\lambda x.x$ $x)$
-\end{center}
+\begin{align*}
+(\lambda x.x x) (\lambda x.x x)\quad &= \quad (\lambda x.x x) [x := (\lambda x.x x)]
+&= \quad (\lambda x.x x) (\lambda x.x x)
+\end{align*}
 This is an interesting example because we can see with an application such as this, the application never reduces or simplifies. We will discuss applications like this later.
 \item The last example shall serve as a segue into our next topic that we must learn for our ultimate goal of understanding combinators. Take the application $(\lambda x. y)z$. \par This is an abstraction that takes a variable $x$ and returns the variable $y$. In lambda calculus, there is no such thing as variable declaration, i.e. we don't know explicitly what $x$ or $y$ are, but we do know that this given abstraction does not use the $x$ variable, because it always just returns this unknown $y$ variable. 
 \begin{center}
